tyler did a thing

--- a/wics.html
+++ b/wics.html
@@ -86,7 +86,7 @@
 \pagestyle{fancy}
 \setlength{\headheight}{50pt}
 \fancyhead[C]{
-  \textbf{\large Marcella Hastings} \\ 
+  \textbf{\large Marcella Hastings} \\
   50 Curtis Ave. Somerville MA 02144\\
   marcellahastings@gmail.com $\bullet$ marcellahastings.com\\
   952$\cdot$688$\cdot$2246}
@@ -115,11 +115,11 @@
 
 				<section>
 					<h2>Personal Sites</h2>
-					<p><a href="http://marcellahastings.com">Marcella</a></p>
-					<p><a href="http://alexlenail.me">Alex</a></p>
-					<p><a href="http://www.tylerlubeck.com">Tyler</a></p>
-					<p><a href="http://www.michaelbjames.com/">Michael</a></p>
-					<p><a href="http://carolynsaund.me">Carolyn</a></p>
+					<p><a target="_blank" href="http://marcellahastings.com">Marcella</a></p>
+					<p><a target="_blank" href="http://alexlenail.me">Alex</a></p>
+					<p><a target="_blank" href="http://www.tylerlubeck.com">Tyler</a></p>
+					<p><a target="_blank" href="http://www.michaelbjames.com/">Michael</a></p>
+					<p><a target="_blank" href="http://carolynsaund.me">Carolyn</a></p>
 
 				</section>
 
@@ -128,13 +128,13 @@
 				<section>
 					<section>
 						<h2>Demo Time</h2>
-						<p><a href="http://www.latextemplates.com/cat/curricula-vitae">So many resume templates</a></p>
-						<p><a href="http://www.xm1math.net/texmaker/download.html">Get TexMaker</a></p>
-						<p><a href="http://www.adobe.com/products/indesign.html">Get InDesign</a></p>
+						<p><a target="_blank" href="http://www.latextemplates.com/cat/curricula-vitae">So many resume templates</a></p>
+						<p><a target="_blank" href="http://www.xm1math.net/texmaker/download.html">Get TexMaker</a></p>
+						<p><a target="_blank" href="http://www.adobe.com/products/indesign.html">Get InDesign</a></p>
 					</section>
 					<section>
 						<h2>Share LaTeX</h2>
-						<p><a href="https://www.sharelatex.com/project/54e8eebf4e488953109e73b8">Useful for editing online.</a></p>
+						<p><a target="_blank" href="https://www.sharelatex.com/project/54e8eebf4e488953109e73b8">Useful for editing online.</a></p>
 					</section>
 				</section>
 
@@ -147,7 +147,7 @@
 
 					<section>
 						<h2>Where to look</h2>
-						<p><span class="fragment roll-in"><a href="https://angel.co/">Look online</a></span></p>
+						<p><span class="fragment roll-in"><a target="_blank" href="https://angel.co/">Look online</a></span></p>
 						<p><span class="fragment roll-in">Ask your friends</span></p>
 						<p><span class="fragment roll-in">Ask professors</span></p>
 					</section>
