updated dependency paths, now wics looks pretty

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 			Find some of my more expressive moments here.
 		</p>
 		<ul class="my say">
-			<li><a href="carolynsaund.me/wics/wics.html">WiCS Professional Development Presentation</a></li>
-			<li><a href="carolynsaund.me/slideshows/thainam.html">Thailand and Vietnam slideshow</a></li>
+			<li><a href="./wics/wics.html">WiCS Professional Development Presentation</a></li>
+			<li><a href="./slideshows/thainam.html">Thailand and Vietnam slideshow</a></li>
 		</ul>
 		<ul class="my say">
 			<li>A piece on <a href="https://medium.com/@caro.lyn/deep-learning-evolution-and-why-intelligence-is-not-just-recognition-8590533cd638">deep learning and human intelligence</a></li>
