--- a/slideshows/thainam.html
+++ b/slideshows/thainam.html
@@ -41,20 +41,27 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>The HTML Presentation Framework</h3>
-					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
-					</p>
+					<h1>Carolyn in SE Asia</h1>
+					<h3>29 days, 2000km, two countries, <br>one girl.</h3>
 				</section>
 
-				<section>
-					<h2>Hello There</h2>
-					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
-					</p>
+				<section data-background="./img/thailandmap.jpg">
 				</section>
 
+				<section data-background="./img/khaolak.png">
+				</section>
+
+				<section data-background="./img/khaolak.png">
+				</section>
+
+				<section data-background="./img/khaolak.png">
+				</section>
+
+				<section data-background="./img/khaolak.png">
+				</section>
+
+				<section data-background="./img/vietnammap2.png">
+				</section>"
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
