added slides to who tab

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 		</p>
 
 		<p class="my do">
-		<b>Coming soon:</b> pictures of rock climbing in Vietnam, ice climbing in New Hampshire, those damn half-marathons I keep signing up for, my latest sea kayak adventure, and that one time I tried to bike 134 miles on a hybrid bike with no training. 
+			Checkout my <a href="./slideshows/thainam.html">Thailand and Vietnam slideshow</a><br>
+			<b>Coming soon:</b> pictures of rock climbing in Vietnam, ice climbing in New Hampshire, those damn half-marathons I keep signing up for, my latest sea kayak adventure, and that one time I tried to bike 134 miles on a hybrid bike with no training. 
 		</p>
 
 		<p class="my make">
