added two slides to vietnam

--- a/slideshows/thainam.html
+++ b/slideshows/thainam.html
@@ -107,6 +107,9 @@
 				<section data-background="./img/vietnam/wires.jpg">
 				</section>
 
+				<section data-background="./img/vietnam/weasalpoop.jpg">
+				</section>
+
 				<section data-background="./img/vietnam/cuchi1.jpg">
 				</section>
 
@@ -119,6 +122,9 @@
 				<section data-background="./img/vietnam/mountainsdanang.jpg">
 				</section>"
 				
+				<section data-background="./img/vietnam/babylaura.jpg">
+				</section>
+
 				<section data-background="./img/vietnam/hoianmemotorbike.jpg">
 				</section>"
 				
