deleted a dumb word

--- a/slideshows/thainam.html
+++ b/slideshows/thainam.html
@@ -42,7 +42,7 @@
 			<div class="slides">
 				<section>
 					<h1>Carolyn in SE Asia</h1>
-					<h3>29 days, 2000km, two countries, <br>one girl.</h3>
+					<h3>29 days, 2000km, two countries.</h3>
 				</section>
 
 				<section data-background="./img/thailandmap.jpg">
