updated bio info

--- a/index.html
+++ b/index.html
@@ -58,15 +58,17 @@
 		</p>
 		<p class="my who" id="me-intro">
 			<b>About Me</b> <br>
-				I will receive my B.S. in Computer Science and Cognitive
+				This is a funny mix website of personal and professional use. I need to decide which one at some point in the future. <br> 
+				I recieved my B.S. in Computer Science and Cognitive
 				and Brain Sciences from Tufts University in May 2015. My main focus in both areas of study has primarily been <b>Machine Learning</b> and <b>Artificial Intelligence</b>, which I intend to continue in graduate studies. <br>
 				I am motivated by passion. Whatever the task, being surrounded by passionate people brings out my most inspired and creative work. I love working in teams small enough to personally interact with each member every day, and take as easily to leading a project I care about as I do to following a team lead's vision.<br>
 				I have also been described as an avid world traveller. For more about who I am and how I fill my time, check out what I <b>do</b> and <b>where</b> I've been up above.  
 		</p>
 		<p class="my who" id="me-intro">
 			<b>Professional Goals</b><br>
-			I am searching for a company that speaks to my ideal increase-awesome, decrease-suck world balance. Which is to say, I want to work somewhere that cares about its <b>global positive impact</b>. Whether it's tools that enable others to be more effective, or a direct channel for charitable influence, I care deeply about improving the world around me.<br>
-			I hope to attend a PhD program in Machine Learning within the next 5 years. 
+			I am currently an SDK Engineer at Jibo, Inc. I find that it
+			 speaks to my ideal increase-awesome, decrease-suck world balance. Which is to say, I love to work for such a place that cares about its <b>global positive impact</b>. Whether it's tools that enable others to be more effective, or a direct channel for charitable influence, I care deeply about improving the world around me.<br>
+			I firmly believe Artificial Intelligence is the way of the future. I intend to attend a doctoral program when I narrow my interest to a particular subdomain.  
 
 		<p class="my what">
 			If you may want to hire me, please look at my <a href="csaund_resume.pdf">resume</a>.
@@ -117,10 +119,8 @@
 		</p>
 		<p class="my make">
 			<b>Current Side Projects</b>
-				Presently, I am working on building my first mobile apps (android) which are "ReaList," a
-				list-keeping app that actually does all the things you want it to do, and "FuxWit" -- think
-				Reddit meets YikYak/Twitter for location-based information sharing. On both projects I design UI and do front-end development. <br>
-				I am also in the middle of writing a Go AI. My plan for that is to use Theano's ML library to train a neural net on Go game states and use a reinforcement learning algorithm to determine ideal game states. Last time I did this (with <a href="https://github.com/csaund/deep-pink.git">Chess</a>) it was really slow, so we'll see if it gets any better. 
+				 <br>
+				I am in the middle of writing a Go AI. My plan for that is to use Theano's ML library to train a neural net on Go game states and use a reinforcement learning algorithm to determine ideal game states. Last time I did this (with <a href="https://github.com/csaund/deep-pink.git">Chess</a>) it was really slow, so we'll see if it gets any better. 
 		</p>
 		<!--
 		<p class="my make">
@@ -160,7 +160,6 @@
 
 		<p class="my where">
 			I grew up in <b>San Carlos, California</b>, in Silicon Valley. Now I am a happy transplant to the <b>Boston/Cambridge</b> area. <br>
-			Coming soon: custom google maps of my recent adventures.
 			<!--
 			<iframe width="600" height="450" frameborder="0" style="border:0" src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=13&size=600x300&maptype=roadmap
 &markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318
