changed some info to be about me

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="#" data-toggle="modal" data-target="#skill" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#experience" class="w3ls-hover"><span data-letters="Experience">Experience </span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education </span></a></li>
-						<li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Work">Work</span></a></li>
+						<li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Work">Play</span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact </span></a></li> 
 						<li><a class="w3ls-icon" href="#"><span class="glyphicon glyphicon-save"></span></a></li> 
 					</ul>
@@ -56,12 +56,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //top-nav -->
 	
 	<!-- banner --> 
-	<div class="video" data-vide-bg="video/cv">  
+	<div class="video" data-vide-bg="">
 		<div class="container">
 			<div class="banner-text agileinfo-text">  
-				<h1>Leland M. Thompson</h1> 
-				<h6>Web Designer & Developer</h6>
-			</div>  
+				<h1>Carolyn M. Saund</h1>
+				<h6>Software Developer</h6>
+				<h6>For Robots and Other Cool Things</h6>
+			</div>
 		</div>	
 	</div>	
 	<script src="js/jquery.vide.min.js"></script>
@@ -77,48 +78,44 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="modal-body modal-spa">
 					<div class="about"> 
 						<div class="col-md-4 about-left ">
-							<img src="images/img1.jpg" class="img-responsive" alt=""/>
+							<img src="images/headshot.jpg" class="img-responsive" alt=""/>
 						</div>
 						<div class="col-md-8 about-right wthree">
-							<h3>Hi, i'm <span>Leland M. Thompson </span></h3>
-							<h4>Web Designer & Developer </h4>
+							<h3>Hello yes this is <span>Carolyn M. Saund</span></h3>
+							<h4>a.k.a. Caro </h4>
 							<ul class="address">
-								<li>
-									<ul class="agileits-address-text ">
-										<li><b>D.O.B</b></li>
-										<li>23-06-1980</li>
-									</ul>
-								</li>
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>PHONE </b></li>
-										<li>+00 111 222 3333</li>
+										<li>+01 650 483 4727</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>ADDRESS </b></li>
-										<li>756 global Place, North Sydney, Canada.</li>
+										<li>44 Union Street, Cambridge, MA</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>E-MAIL </b></li>
-										<li><a href="mailto:example@mail.com"> mail@example.com</a></li>
+										<li><a href="mailto:carolyn.saund@gmail.com"> carolyn.saund@gmail.com</a></li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li><b>WEBSITE </b></li>
-										<li><a href="http://w3layouts.com">www.myresume.com</a></li>
+										<li><b>RESUME </b></li>
+										<li><a href="./csaund_resume.pdf">it's my resume!</a></li>
 									</ul>
 								</li>
 							</ul> 
 						</div> 
 						<div class="clearfix"> </div> 
-						<div class="about-text agileits-w3layouts"> 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet sem sit amet dolor luctus pellentesque. Pellentesque eleifend tellus at interdum elementum. Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna. Nam aliquet eros eget sapien consequat tincidunt at vel nibh sed accumsan quam.</p>
-							<p class="agile-br"> Aliquam aliquet sapien quis mauris semper suscipit. Maecenas pharetra dapibus posuere. Praesent odio sem, varius quis dolor vel, maximus dapibus mi. Pellentesque mattis mauris neque. Nam aliquam turpis ante, at cursus massa ullamcorper ut  </p>
+						<div class="about-text agileits-w3layouts">
+							<p> I recieved my B.S. in Computer Science and Cognitive
+							and Brain Sciences from Tufts University in May 2015. My main focus in both areas of study has primarily been <b>Machine Learning</b> and <b>Artificial Intelligence</b>, which I intend to continue in graduate studies. <br></p>
+							<p class="agile-br">I am motivated by passion. Whatever the task, being surrounded by passionate people brings out my most inspired and creative work. I love working in teams small enough to personally interact with each member every day, and take as easily to leading a project I care about as I do to following a team lead's vision.<br></p>
+							<p class="agile-br">I have also been described as an avid world traveller. For more about who I am and how I fill my time, check out what I <b>do</b> and <b>where</b> I've been up above.</p>
 						</div>
 					</div>
 				</div> 
@@ -250,23 +247,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="experience">  
 						<div class="experience-grids">
 							<div class="experience-left">
-								<h3>2011<span>(2 Years Course)</span> </h3>
-								<h5> University Name</h5>
+								<h3>2015<span>Bachelor of Science</span> </h3>
+								<h5>Tufts University</h5>
+								<h6>Student</h6>
+								<h6>Teaching Assistant</h6>
+								<h6>Research Assistant</h6>
 							</div>
 							<div class="experience-right">
-								<h4>Master of Web Design</h4>
-								<p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at</p>
+								<h4>Computer Science, Cognitive and Brain Sciences</h4>
+								<p>I entered set on Cognitive Science and gravitated towards Cognitive Architecture, inspired by my first Machine Learning course.</p>
+								<p>For detailed coursework and projects, please see my resume.</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div> 
 						<div class="experience-grids experience-grids-btm">
 							<div class="experience-left">
-								<h3>2009<span>(3 Years Course)</span></h3>
-								<h5> University Name</h5>
+								<h3>2013<span>Abroad</span></h3>
+								<h5>University of Canterbury</h5>
+								<h6>Christchurch, New Zealand</h6>
 							</div>
 							<div class="experience-right">
-								<h4>Diploma in Design</h4>
-								<p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at</p>
+								<h4>One Year Abroad</h4>
+								<p>In addition to a full course load abroad, I was an instructor for the Girls Computer Club for secondary school students, and achieved the highest marks in my class.</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div> 
@@ -279,20 +281,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- modal-gallery -->
 	<div class="modal fade modal-gallery" id="work" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
-			<div class="modal-content"> 
+			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">My Work</h4> 
+					<h4 class="modal-title">My Play</h4>
+					<h5 class="modal-title">Get it? It's not my work.</h5>
 				</div>
 				<div class="modal-body modal-spa">
-					<div class="gallery"> 
-						<div class="gallery-row"> 
+					<div class="gallery">
+						<div class="gallery-row">
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
 									<a href="images/g1.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
 										<img src="images/g1.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5> 
+											<h5>View+</h5>
 										</div>
 									</a>
 								</div>
@@ -302,7 +305,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
 										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5> 
+											<h5>View+</h5>
 										</div>
 									</a>
 								</div>
@@ -312,7 +315,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
 										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5> 
+											<h5>View+</h5>
 										</div>
 									</a>
 								</div>
@@ -322,7 +325,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
 										<img src="images/g4.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5> 
+											<h5>View+</h5>
 										</div>
 									</a>
 								</div>
@@ -332,7 +335,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g5.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
 										<img src="images/g5.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5> 
+											<h5>View+</h5>
 										</div>
 									</a>
 								</div>
@@ -342,7 +345,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
 										<img src="images/g6.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5> 
+											<h5>View+</h5>
 										</div>
 									</a>
 								</div>
@@ -352,7 +355,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
 										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5> 
+											<h5>View+</h5>
 										</div>
 									</a>
 								</div>
@@ -362,7 +365,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g1.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
 										<img src="images/g1.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5> 
+											<h5>View+</h5>
 										</div>
 									</a>
 								</div>
@@ -372,7 +375,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
 										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5> 
+											<h5>View+</h5>
 										</div>
 									</a>
 								</div>
@@ -380,10 +383,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="clearfix"> </div>
 						</div>
 						<!--  light box js -->
-						<script src="js/lightbox-plus-jquery.min.js"> </script> 
-						<!-- //light box js-->  
+						<script src="js/lightbox-plus-jquery.min.js"> </script>
+						<!-- //light box js-->
 					</div>
-				</div> 
+				</div>
 			</div>
 		</div>
 	</div>
@@ -394,14 +397,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="modal-content"> 
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">Get In Touch</h4>
+					<h4 class="modal-title">Talk To Me</h4>
 				</div>
 				<div class="modal-body modal-spa">
 					<div class="contact"> 
 						<div class="contact-w3lsrow">
-							<div class="col-md-6 contact-left w3-agileits">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.9503398796587!2d-73.9940307!3d40.719109700000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a27e2f24131%3A0x64ffc98d24069f02!2sCANADA!5e0!3m2!1sen!2sin!4v1441710758555" allowfullscreen></iframe>
-							</div>
+							<!--<div class="col-md-6 contact-left w3-agileits">-->
+								<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.9503398796587!2d-73.9940307!3d40.719109700000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a27e2f24131%3A0x64ffc98d24069f02!2sCANADA!5e0!3m2!1sen!2sin!4v1441710758555" allowfullscreen></iframe>-->
+							<!--</div>-->
 							<div class="col-md-6 contact-right">
 								<form action="#" method="post">
 									<div class="styled-input agile-styled-input-top">
@@ -439,6 +442,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- footer -->
 	<div class="footer">
 		<div class="container">
+			<p>I'm not ashamed. I write pretty code, not websites.</p>
+			<p>Besides, a good dev doesn't reinvent tools that already work.</p>
 			<p>© 2016 Easy Resume. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
 		</div>
 	</div>
