--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Easy Resume a Personal Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title> 
+<title>Carolyn Saund</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Easy Resume Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -198,12 +198,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="experience w3-agileits-info">  
 						<div class="experience-grids">
 							<div class="experience-left">
-								<h3>2014 - Now </h3>
-								<h5>Company Name </h5>
+								<h3>2015 - Now</h3>
+								<h5>Jibo Inc.</h5>
 							</div>
 							<div class="experience-right">
-								<h4>Senior Web Designer</h4>
-								<p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at</p>
+								<h4>Robot SDK Developer</h4>
+								<p>Early employee of Jibo, Inc. Implemented and Architected major backend system to allow Jibo Skills to run within electron contexts on platform. Regularly work across teams for new initiatives. Won first company Culture Award.</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div> 
